src/app/app.component.scss
@import '../olib.scss';

$orange: #FF4500;
$purple: #430873;
$alpha: 0.5;
$alorange: adjust-color($orange, $alpha: -$alpha);
$alpurple: adjust-color($purple, $alpha: -$alpha);
$angle: 60deg;
$dist: 33%;
$antialias: 0.08%;
$hero-size: 66vh;

.placeholder{
  height: 200vh;
  width: 100%;
  color: white;
}

.img-container{
  width: 100%;
  height: 100%;
  position: relative;
  overflow-y: auto;
  overflow-x: hidden;
  z-index: 0;
}

.img-mock{
  z-index: -2;
  // position: absolute;
  position: relative;
  width: 100%;
  height: $hero-size;
  background: repeating-linear-gradient($angle, $alpurple 0%, $alorange $dist, $alpurple $dist+$antialias),
            repeating-linear-gradient(-$angle, $alpurple 0%, $alorange $dist, $alpurple $dist+$antialias);
  transform: translateZ(-10px) scale(1.5);
  transition: 2s transform;
  &:hover{
    transform: translateZ(4px);
  }
}

$name-badge-height: 6rem;
.name-badge-container {
  width: 100%;
  margin: 0;
  margin-top: -$name-badge-height/2;
  height: $name-badge-height;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: stretch;
}

.name-badge-row {
  position: relative;
  display: flex;
  flex-direction: row;
  justify-content: center;
  justify-items: center;
  align-content: center;
  top: 0px !important;
  height: $name-badge-height;
  .name-badge{
    position: relative;
    padding: 0em 10em;
    background-color: white;
    border-radius: 2em;
    min-width: 0px;
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    align-items: center;

    transition: min-width 0.3s, all 1s;
    p {
      padding: 0;
      margin: 0;
      font-family: 'Raleway', sans-serif;
      font-weight: 300;
      font-size: 2.5rem;
    }
  }
  &.full{
    .name-badge{
      min-width: 100%;
      padding: 0em 1em;
      border-radius: 0;
    }
  }
}

.content-holder{
  margin-top: -$name-badge-height/2;
  padding-top: $name-badge-height;
  background-color: #1C0231;
  box-shadow: 0 0 1em 0 #1C0231;
  .content{
    z-index: 1;
  }
}

